@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 1.1.1 | Tested on CB 1.4.7-R1.0
+ + Added API functions so other plugins can hook into Soulbound as well! (Instead of the other way round)
  + Added support for LoreLocks!
 
 Version 1.1.0 | Tested on CB 1.4.7-R1.0
